# plywood-gallery

./: .gitignore  README.md  changelog.md  cleaning.ipynb  cleaningX.ipynb  data_file.json  dummy.ipynb  gallery.ipynb  gallery2.ipynb  howto.md  index.html  index2.html  init_images_and_text.js  new_cell_magic.ipynb  only_one_img.ipynb  plywood_tools.py  pyproject.toml  sorter.ipynb  temp.js  temp.py  test.py  test_first_try.py  todo.md
.github/workflows/: pypi-publish.yml  python-package.yml
TEST/: TEEE.ipynb  new_gallery.ipynb  new_index.html
TEST/gallery_assets/: gallery_parameters.json
debug/: hello.json  x.ipynb
debugging/: test_notebook.ipynb
docs/: code_animation_idea.html  gallery.ipynb  hello.ipynb  html_build.ipynb  html_configuration.ipynb  html_configuration.yaml  index.html  init_images_and_text.js  start_server.ipynb
docs_dummy/: mini_notebook.ipynb
dummy/: dummy.ipynb  new_index.html  temp.js  test.py  todo.md
gallery_assets/: gallery_parameters.json
ideas/: idea_plywood_notebook.html  idea_plywood_notebook.ipynb  make_release.md  webserver_ideas.ipynb
imgs/: array_gallery.json  gallery_parameters.json  gallery_parametersX.json  plot_gallery.json
minimal_example/: test_notebook.ipynb
plywood_gallery/: __init__.py  browser_utils.py  generate_html.py  load_jinja.py  plywood_tools.py  quickstart.py
temp/: html_configuration.yaml  yaml_reader.ipynb
template/: template_gallery.ipynb  template_index.html
test/: test.ipynb
tests/: test_ChapterConfig.py  test_Chaptermanager.py  test_first_try.py  test_quickstart.py
(+20 files in other folders)
