[tool.poetry]
name = "plywood_gallery"
version = "0.0.2"
description = "Jupyter cell magic that turns images from cell output into a  gallery"
authors = ["kolibril13"]
license = "MIT"
include = ["plywood_gallery/template"]


[tool.poetry.dependencies]
python = ">=3.7,<3.11"
ipython = "^7.31.0"
Pillow = "^9.0.0"
ipykernel = "^6.6.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
scipy = "^1.7.3"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
