[tool.poetry]
name = "plywood-gallery"
version = "0.0.12"
description = "Jupyter cell magic that turns images from cell output into a  gallery"
authors = ["kolibril13"]
license = "MIT"
include = ["plywood_gallery/template"]
readme="README.md"

repository="https://github.com/kolibril13/plywood-gallery"
homepage="https://kolibril13.github.io/plywood-gallery/"



[tool.poetry.dependencies]
python = ">=3.8,<3.14"
ipython = ">=7.31.0"
Pillow = "^9.0.0"
ipykernel = ">=6.7.0"
watchdog = ">=2.1.6"
Flask = ">=2.0.2"
Jinja2 = ">=3.1.1"
PyYAML = ">=6.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
scipy = ">=1.7.3"
seaborn = ">=0.11.2"
black = ">=21.12b0"
isort = ">=5.10.1"
pytest = ">=7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
